--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
     </ul>
   </div>
 </nav>    
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <br><br>
+    <h1 class="display-4">Ninja Gym</h1><br><br>
+    <p class="lead">The ultimate fight experience</p><br><br><br>
+    <div id="button">
+      <a class="button" href="contact.html">Book a free trial!</a></div>
+  </div>
+</div>
 </body>
 </html>
