added gym 2 photos

--- a/index.html
+++ b/index.html
@@ -48,5 +48,24 @@
       <a class="button" href="contact.html">Book a free trial!</a></div>
   </div>
 </div>
+<!--gym-->
+<div class="mobileview">
+<div id="gym">
+      <div class="sectionheader">THE GYM</div>
+        <div class="row">
+          <div class="col-sm-12-col-md-6">
+            <div class="content">
+              <img src="images/gym1.jpg" alt="gym1" class="img-fluid"></div>
+        </div>
+          <div class="col-sm-12 col-md-6">
+            <div class="content">
+              <img src="images/gym2.jpg" alt="gym2" class="img-fluid"></div>
+            </div>
+          </div>
+        <div class="row">
+          <h3>Training philosophy</h3>
+          <p>Our goal is to help you to evolve into everything that you can be. The Ninja Motto is Unleash Your Greatness since it is about your journey to unleashing your potential as a human being.</p>
+          <p>All our courses are rooted in reality. You will learn self-defense for the real world and you will develop a keen understanding of how to protect yourself in real life. Every single technique taught at the Ninja Gym is battle-tested and street-certified.</p>
+  </div>
 </body>
 </html>
