added facilities list

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="col-sm-12-col-md-6">
             <div class="content">
               <img src="images/gym1.jpg" alt="gym1" class="img-fluid"></div>
-        </div>
+          </div>
           <div class="col-sm-12 col-md-6">
             <div class="content">
               <img src="images/gym2.jpg" alt="gym2" class="img-fluid"></div>
@@ -66,6 +66,32 @@
           <h3>Training philosophy</h3>
           <p>Our goal is to help you to evolve into everything that you can be. The Ninja Motto is Unleash Your Greatness since it is about your journey to unleashing your potential as a human being.</p>
           <p>All our courses are rooted in reality. You will learn self-defense for the real world and you will develop a keen understanding of how to protect yourself in real life. Every single technique taught at the Ninja Gym is battle-tested and street-certified.</p>
+        <div class=row>
+          <div class="column">
+            <div class="content">
+              <img src="images/gym3.jpg" alt="gym3" class="img-fluid"></div>
+          </div>
+          <div class="column">
+            <div class="content">
+              <img src="images/gym4.jpg" alt="gym4" style="width:100%"></div>
+          </div>
+        </div>
+        <div class="row">
+          <h3>Our facilities</h3>
+          <ul>
+            <li>State-of-the-art cardiovascular, free weights and resistance training equipment</li>
+            <li>2 boxing rings</li>
+            <li>Lounge area with phone charging stations</li>
+            <li>Rental shoe lockers</li>
+            <li>Free usage of boxing gloves and wraps</li>
+            <li>Complimentary towel service</li>
+            <li>Free wifi access</li>
+            <li>12 free standing heavy bags</li>
+            <li>Spacious locker rooms with steam and sauna facilities</li>
+           <li>Over 20,500 sq ft space with world-class design features</li>
+           <li>InBody body composition analysis machine </li>
+        </ul>
+      </div>
   </div>
 </body>
 </html>
