--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div id="gym">
       <div class="sectionheader">THE GYM</div>
         <div class="row">
-          <div class="col-sm-12-col-md-6">
+          <div class="col-sm-12 col-md-6">
             <div class="content">
               <img src="images/gym1.jpg" alt="gym1" class="img-fluid"></div>
           </div>
@@ -67,17 +67,17 @@
           <p>Our goal is to help you to evolve into everything that you can be. The Ninja Motto is Unleash Your Greatness since it is about your journey to unleashing your potential as a human being.</p>
           <p>All our courses are rooted in reality. You will learn self-defense for the real world and you will develop a keen understanding of how to protect yourself in real life. Every single technique taught at the Ninja Gym is battle-tested and street-certified.</p>
         <div class=row>
-          <div class="column">
+          <div class="col-sm-12 col-md-6">
             <div class="content">
               <img src="images/gym3.jpg" alt="gym3" class="img-fluid"></div>
           </div>
-          <div class="column">
+          <div class="col-sm-12 col-md-6">
             <div class="content">
               <img src="images/gym4.jpg" alt="gym4" style="width:100%"></div>
           </div>
         </div>
-        <div class="row">
-          <h3>Our facilities</h3>
+      <div class="row">
+        <h3>Our facilities</h3><br>
           <ul>
             <li>State-of-the-art cardiovascular, free weights and resistance training equipment</li>
             <li>2 boxing rings</li>
@@ -92,6 +92,87 @@
            <li>InBody body composition analysis machine </li>
         </ul>
       </div>
-  </div>
+      <div class="row"></div>
+        <div class="col-sm-12 col-md-6">
+          <div class="content">
+            <img src="images/gym6.jpg" alt="gym6" style="width:100%"></div>
+        </div>  
+      <div class="col-sm-12 col-md-6">
+          <div class="content">
+            <img src="images/gym5.jpg" alt="gym5" style="width:100%"></div>
+        </div>
+      </div>
+  <br>
+      <div class="row" id="classtype">
+        <h3>Overview of our classes</h3>
+          <div class="accordion" id="accordion">
+            <div class="card">
+              <div class="card-header" id="taekwando">
+                <h2 class="mb-0">
+                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#taekwando"><i class="fas fa-play" id="fa"></i>Taekwando</button>
+                </h2>
+              </div>
+          <div id="taekwando" class="collapse" data-parent="#accordion">
+            <div class="card-body">Taekwando is a Korean martial art, characterized by its emphasis on head-height kicks, jumping and spinning kicks, and fast kicking techniques. It adopts stances that are narrower and taller than the broader, wide stances used by most other martial arts. The tradeoff of decreased stability is believed to be worth the commensurate increase in agility, particularly in Kukkiwon-style Taekwondo.
+            </div>
+          </div>
+        </div>
+            <div class="card">
+              <div class="card-header" id="muaythai">
+                <h2 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#muaythai"> <i class="fas fa-play" id="fa"></i>Muay Thai</button>
+                </h2>
+              </div>
+          <div id="muaythai" class="collapse" data-parent="#accordion">
+            <div class="card-body">Muay Thai is one of the most powerful and effective martial arts in the world. Developed over thousands of years, this ancient martial art of Thailand is known for its tremendous power, maximum efficiency, and raw simplicity. Muay Thai utilizes a beautiful symphony of kicks, punches, knees, and elbows with fluidity and grace. Muay Thai is often referred to as the “Art of Eight Limbs”. 
+            </div>
+          </div>
+        </div>
+            <div class="card">
+              <div class="card-header" id="mma">
+                <h2 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#mma"><i class="fas fa-play" id="fa"></i>MMA</button>
+                </h2>
+              </div>
+          <div id="mma" class="collapse" data-parent="#accordion">
+            <div class="card-body">MMA is a challenging yet exhilarating full-contact sport that implements a combination of techniques from Brazilian Jiu-Jitsu, Wrestling, Muay Thai, and Boxing.
+            </div>
+          </div>
+        </div>
+            <div class="card">
+              <div class="card-header" id="karate">
+                <h2 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#karate"><i class="fas fa-play" id="fa"></i>Karate</button>
+                </h2>
+              </div>
+          <div id="karate" class="collapse" data-parent="#accordion">
+            <div class="card-body">Karate is predominantly a striking art using punching, kicking, knee strikes, elbow strikes and open-hand techniques such as knife-hands, spear-hands and palm-heel strikes. It features both hard and soft techniques, utilizing direct strikes and circular movement to deflect attacks rather than trying to meet strength with strength. 
+            </div>
+          </div>
+       </div>
+            <div class="card">
+              <div class="card-header" id="jujitsu">
+                <h2 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#jujitsu"><i class="fas fa-play" id="fa"></i>Brazilian Ju-jitsu</button>
+                </h2>
+               </div>
+          <div id="jujitsu" class="collapse" data-parent="#accordion">
+            <div class="card-body">Ju-jitsu is founded on the concept that a smaller, weaker person can successfully defend themselves against a bigger, stronger, heavier opponent by using technique, leverage, and most notably, taking the fight to the ground, and then applying joint locks and chokeholds to defeat the opponent. Ju-jitsu training can be used for both sport grappling tournaments and self-defense situations.
+            </div>
+          </div>
+        </div>
+            <div class="card">
+              <div class="card-header" id="boxing">
+                <h2 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#boxing"><i class="fas fa-play" id="fa"></i>Boxing</button>
+                </h2>
+              </div>
+          <div id="boxing" class="collapse" data-parent="#accordion">
+            <div class="card-body">Boxing is one of the oldest and most efficient combat sports. Utilizing punches, footwork, and head movement, boxing is the sweet science of hitting without getting hit. Through proper body mechanics, boxing is as efficient as it is smooth in generating powerful punches and beautiful evasive defense.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
