--- a/index.html
+++ b/index.html
@@ -174,5 +174,124 @@
         </div>
       </div>
     </div>
+    </div>
+    <div class="mobileview">
+<div id="instructors">
+      <div class="sectionheader">THE NINJA TEAM</div>
+        <h2 class="lower">Our instructors</h2>
+      <div class="row">
+        <div class="col-sm-12 col-md-6" id="boxer">
+          <div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="images/boxer1.jpg" alt="boxer1" class="img-fluid">
+    </div>
+    <div class="flip-card-back">
+      <h1>John</h1>
+      <p>Muay Thai coach</p>
+      <ul class="fa-ul">
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>4x ONE Championship Lightweight World Champion</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Over 20 years of competitive martial arts and teaching experience</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Known for his strong defense and counter offense</li>
+          </ul>
+    </div>
+  </div>
+</div>
+       </div>
+        <div class="col-sm-12 col-md-6" id="boxer">
+         <div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="images/boxer2.jpg" alt="boxer2" class="img-fluid">
+    </div>
+    <div class="flip-card-back">
+      <h1>Felix</h1>
+      <p>Taekwando coach</p>
+       <ul class="fa-ul">
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>5x Title Holder in the National Taekwondo Sparring Championship</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Received his Taekwondo 6th Dan Black Belt in 2011 - first coach in Singapore to attain this status</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Equipped with a certification in Injury Therapy, allowing him to provide sound advice to students during competition/training</li>
+          </ul>
+    </div>
+  </div>
+</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-6" id="boxer"><div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="images/boxer3.jpg" alt="boxer3" class="img-fluid">
+    </div>
+    <div class="flip-card-back">
+      <h1>Sam</h1>
+      <p>MMA coach</p>
+       <ul class="fa-ul">
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Competed in and won numerous World, National, and Regional martial arts competitions such as the FILA World Championships</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Widely regarded as the #1 pound-for-pound MMA fighter in Asia</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Copa do Mundo World Champion in MMA with over 15 years of teaching experience</li>
+          </ul>
+    </div>
+  </div>
+</div>
+        </div>
+        <div class="col-sm-12 col-md-6" id="boxer"><div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="images/boxer4.jpg" alt="boxer4" class="img-fluid">
+    </div>
+    <div class="flip-card-back">
+      <h1>Patrick</h1>
+      <p>Boxing coach</p>
+       <ul class="fa-ul">
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Known for being an unorthodox knockout artist with his powerful punches and aggressive style</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>3x WBA Boxing World Champion</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Has trained alongside fellow World Champions Manny Pacquiao and Jerwin Ancajas</li>
+          </ul>
+    </div>
+  </div>
+</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-6" id="boxer"><div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="images/boxer5.jpg" alt="boxer5" class="img-fluid">
+    </div>
+    <div class="flip-card-back">
+      <h1>Jack</h1>
+      <p>Karate coach</p>
+       <ul class="fa-ul">
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Only coach in Singapore to have competed in and won 2 world open tournaments</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Over 20 years of teaching experience, and his students are well known for their accuracy and power</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Internationally qualified coach who started his coaching career at the famed Shtoryu Karate Association</li>
+          </ul>
+    </div>
+  </div>
+</div>
+        </div>
+        <div class="col-sm-12 col-md-6" id="boxer"><div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="images/boxer6.jpg" alt="boxer6"  class="img-fluid">
+    </div>
+    <div class="flip-card-back">
+      <h1>Mark</h1>
+      <p>Ju-jitsu coach</p>
+       <ul class="fa-ul">
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Gold Medalist at the Brazil Nationals and a 3x Sao Paulo State Champion with over 20 years of experience</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Holds a 1st degree Black Belt in Jiu-Jitsu with over 10 years of teaching experience</li>
+          <li><span class="fa-li"><i class="fas fa-fist-raised" id="fa"></i></span>Favorite move is the rear naked choke, which he has utilised to submit his opponents.</li>
+          </ul>
+    </div>
+  </div>
+</div>
+
+</div>
+</div>
+</div>
+  </div>
+        </div>
 </body>
 </html>
