--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="card">
               <div class="card-header" id="taekwando">
                 <h2 class="mb-0">
-                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#taekwando"><i class="fas fa-play" id="fa"></i>Taekwando</button>
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#taekwando"><i class="fas fa-play" id="fa"></i>Taekwando</button>
                 </h2>
               </div>
           <div id="taekwando" class="collapse" data-parent="#accordion">
@@ -180,7 +180,7 @@
       <div class="sectionheader">THE NINJA TEAM</div>
         <h2 class="lower">Our instructors</h2>
       <div class="row">
-        <div class="col-sm-12 col-md-6" id="boxer">
+        <div class="column" id="boxer">
           <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
@@ -198,7 +198,7 @@
   </div>
 </div>
        </div>
-        <div class="col-sm-12 col-md-6" id="boxer">
+        <div class="column" id="boxer">
          <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
@@ -218,7 +218,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12 col-md-6" id="boxer"><div class="flip-card">
+        <div class="column" id="boxer"><div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img src="images/boxer3.jpg" alt="boxer3" class="img-fluid">
@@ -235,7 +235,7 @@
   </div>
 </div>
         </div>
-        <div class="col-sm-12 col-md-6" id="boxer"><div class="flip-card">
+        <div class="column" id="boxer"><div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img src="images/boxer4.jpg" alt="boxer4" class="img-fluid">
@@ -254,7 +254,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12 col-md-6" id="boxer"><div class="flip-card">
+        <div class="column" id="boxer"><div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img src="images/boxer5.jpg" alt="boxer5" class="img-fluid">
@@ -271,7 +271,7 @@
   </div>
 </div>
         </div>
-        <div class="col-sm-12 col-md-6" id="boxer"><div class="flip-card">
+        <div class="column" id="boxer"><div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img src="images/boxer6.jpg" alt="boxer6"  class="img-fluid">
@@ -293,5 +293,36 @@
 </div>
   </div>
         </div>
-</body>
+<div class="mobileview">
+<div id="pricing">
+      <div class="sectionheader">OUR PRICING</div>
+       <div class="row">
+  <div class="col-sm-12 col-md-4">
+         <h3>Single class</h3>
+      <p>One drop-in class</p>
+      <div id="price">$20</div>
+      <p>Drop in for classes without any commitment</p>
+  </div>
+  <div class="col-sm-12 col-md-4">
+        <h3>Ten class pack</h3>
+      <p>Save more </p>
+      <div id="price">$190</div>
+      <p>Expires after 2 months</p>
+        </div>
+  <div class="col-sm-12 col-md-4">
+      <h3>1 month unlimited classes</h3>
+      <p>Auto-renews every month</p>
+      <div id="price">$150</div>
+      <p>Hassle free and cost-effective for regulars</p>
+      </div>
+</div>
+<br>
+    <div id="corporate">
+    <h2>Corporate programs</h2>
+  <div class="row" id="corporate">
+  At Ninja Gym, we believe that a healthy workplace equals a healthy business. Through our very diverse range of martial arts and fitness programs, we aim to help people achieve greatness in all aspects of their lives. Help your employees achieve good health, fitness, mental strength, confidence, and a balanced life, and you will reap the benefits of increased employee productivity and enhanced profitability. Consider it an investment in your most valuable asset, your employees.
+  <br><br>
+  <button class="enquire">Enquire now!</button>
+    </div>
+  </div>
 </html>
