--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1 class="display-4">Ninja Gym</h1><br><br>
     <p class="lead">The ultimate fight experience</p><br><br><br>
      <div class="d-sm-block d-md-none">
-      <a class="button" href="#linkForm"s>Book a free trial!</a></div>
+      <a class="button" href="#linkForm">Book a free trial!</a></div>
   <!--for desktop-->
   <div class="d-none d-md-block">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg" id="freeTrial">
@@ -421,7 +421,7 @@
         <p>Expires after 2 months</p>
     </div>
     <div class="column" id="pricelist">
-      <h3>1 month unlimited classes</h3>
+      <h3>1 month unlimited</h3>
         <p>Auto-renews every month</p>
           <div id="price">$150</div>
         <p>Hassle free and cost-effective for regulars</p>
@@ -432,7 +432,7 @@
       <h3>Corporate programs</h3>
       <p>At Ninja Gym, we believe that a healthy workplace equals a healthy business. Through our very diverse range of martial arts and fitness programs, we aim to help people achieve greatness in all aspects of their lives. Help your employees achieve good health, fitness, mental strength, confidence, and a balanced life, and you will reap the benefits of increased employee productivity and enhanced profitability. Consider it an investment in your most valuable asset, your employees.</p>
       <br>
-      <button class="enquire">Enquire now!</button>
+      <a class="button enquire" href="#linkForm">Enquire now!</a>
     </div>
   </div>
 </div>
