added video to desktop version

--- a/pricing.html
+++ b/pricing.html
@@ -61,22 +61,22 @@
         <p>Expires after 2 months</p>
     </div>
     <div class="column" id="pricelist">
-      <h3>1 month unlimited classes</h3>
+      <h3>1 month unlimited</h3>
         <p>Auto-renews every month</p>
           <div id="price">$150</div>
         <p>Hassle free and cost-effective for regulars</p>
     </div>
   </div>
   <div class="row">
-<div class="col-md-8 d-sm-none d-md-block">
-  <img src="images/background.jpg" class="img-fluid">
+<div class="col-md-6" id="video">
+<iframe width="560" height="315" id="video" src="https://www.youtube.com/embed/AJHAUo-1X54?start=210&end=221" frameborder="0" allowfullscreen></iframe>
+
 </div>    
-<div class="col-sm-12 col-md-4" id="corporate">
+<div class="col-sm-12 col-md-6" id="corporate">
   <br>
       <h3>Corporate programs</h3>
-      <p>At Ninja Gym, we believe that a healthy workplace equals a healthy business. Through our very diverse range of martial arts and fitness programs, we aim to help people achieve greatness in all aspects of their lives. Help your employees achieve good health, fitness, mental strength, confidence, and a balanced life, and you will reap the benefits of increased employee productivity and enhanced profitability. Consider it an investment in your most valuable asset, your employees.</p>
-      <br>
-      <button class="enquire">Enquire now!</button>
+      <p>At Ninja Gym, we believe that a healthy workplace equals a healthy business. Through our diverse range of martial arts programs, we will  help your employees achieve good health, fitness, mental strength, confidence, and a balanced life, which leads to increased employee productivity and enhanced profitability. Consider it an investment in your most valuable asset, your employees.</p>
+      <a class="button enquire" href="#linkForm">Enquire now!</a>
     </div>
   </div>
 </div>
